resources/deprecated_items/yaml/postgres.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresql-data
      volumes:
        - name: postgresql-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  ports:
    - name: postgres
      port: 5432
  selector:
    app: postgresql
