resources/deprecated_items/yaml/spring_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: spring
  name: spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spring
    spec:
      containers:
      - image: ryancblocker/saffire_springboot_repo_01:0.0.1-SNAPSHOT
        # imagePullPolicy: "Never"
        name: spring
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: spring
  name: spring
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring
  type: ClusterIP
status:
  loadBalancer: {}
